# Gimi

./: .coverage  .gitignore  COMPLETION_SUMMARY.txt  FINAL_REPORT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  README.md  SUBAGENT_REPORT.md  prompt.md  pyproject.toml  pytest_output.txt  requirements.txt  setup.py  test_output.txt  test_phase1_phase2.py
.gimi/: config.json  refs_snapshot.json
.gimi/index/: commits.db
.gimi/logs/: requests.jsonl
.gimi/vectors/: vectors.db
gimi/: __init__.py  __main__.py  cli.py  config.py  context_builder.py  engine.py  error_handler.py  git_traversal.py  index_status.py  indexer.py  light_index.py  lock.py  main.py  repo.py  retrieval.py  validation.py  vector_index.py
gimi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
gimi/context/: __init__.py  diff_manager.py
gimi/core/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  git.py  lock.py  logging.py  refs.py  repo.py  validation.py
gimi/index/: __init__.py  builder.py  checkpoint.py  embeddings.py  git.py  lightweight.py  vector.py  vector_index.py
gimi/indexing/: git_collector.py  lightweight_index.py
gimi/llm/: __init__.py  client.py  prompt_builder.py
gimi/observability/: __init__.py  logging.py
gimi/retrieval/: __init__.py  context_builder.py  engine.py  (+1 more)
tests/: __init__.py  conftest.py  test_checkpoint.py  test_cli.py  test_config.py  test_e2e.py  test_git.py  test_indexer.py  test_integration.py  test_lock.py  test_paths.py  test_repo.py  test_vector_index.py  test_vector_search.py
(+65 files in other folders)
