[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gimi"
version = "0.1.0"
description = "CLI agent that uses git history to suggest code changes"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "GitPython>=3.1",
]

[project.optional-dependencies]
embedding = [
    "openai>=1.0",
    "numpy>=1.24",
]
llm = [
    "openai>=1.0",
]

[project.scripts]
gimi = "gimi.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
